Fixed scrollbar display in modal

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -38,9 +38,7 @@
   padding: 20px;
   overflow: auto;
   background: white;
-  max-height: 800px;
   text-align: center;
-  overflow-y: auto;
   margin-bottom: -1px;
 }
 
